--- a/package.json
+++ b/package.json
@@ -2,12 +2,13 @@
   "scripts": {
     "dev": "nodemon",
     "seed": "ts-node prisma/seed.ts",
-    "prisma": "prisma", 
+    "prisma": "prisma",
     "prisma:migrate": "prisma migrate dev"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/express": "^4.17.17",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^18.15.0",
     "node-fetch": "^3.3.1",
     "ts-node": "^10.9.1",
@@ -19,6 +20,8 @@
     "bcrypt": "^5.1.1",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
+    "json-web-token": "^3.2.0",
+    "jsonwebtoken": "^9.0.2",
     "nodemon": "^2.0.21",
     "prisma": "^4.11.0",
     "zod": "^3.21.4",
